2011-04-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	java: allow both JAVA and nobase_JAVA in the same Makefile.am
	* automake.in (handle_java): Also strip `nobase_' from the given
	prefix, when needed.
	* tests/java-clean.test: Update and extend.
	* tests/java-compile-install.test: Likewise.
	* tests/java-no-duplicate.test: Likewise.
	* tests/java-sources.test: Likewise.
	* tests/java-noinst.test: Likewise.
	* tests/java-mix-dist-nodist.test: Renamed to ...
	* tests/java-mix.test: ... this, and extended.
	* tests/java-nobase.test: New test, still xfailing due to
	unrelated issues.
	* tests/Makefile.am (TESTS, XFAIL_TESTS): Update.

2011-04-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: more environment sanitization
	* tests/defs.in: Sanity check: abort if any of `parallel_tests'
	or `required' is in the environment.
	($sed_unindent_prog): Initialize to empty, to avoid interferences
	from the environment.
	* tests/self-check-me-in-env.test: Renamed to ...
	* tests/self-check-env-sanitize.test: ... this, and extended.
	* tests/Makefile.am (TESTS): Update.
	(TESTS_ENVIRONMENT): Unset variables `parallel_tests' and
	`required'.  Adjust comments.

2011-04-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: don't allow `$me' to be overridden from the environment
	* tests/defs.in: Sanity check: abort if $me is in the environment.
	* tests/self-check-me-in-env.test: New test.
	* tests/Makefile.am (TESTS_ENVIRONMENT): Unset variable `me'.
	(TESTS): Update.
	Suggestion by Ralf Wildenhues.

2011-04-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: allow overriding of `$me'
	* tests/defs.in ($me): Allow overriding by the including test
	script.  Add some explicative comments.

2011-04-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	depcomp tests: don't reject slower dependency extractors
	* tests/depcomp8b.test: Add the `--enable-dependency-tracking'
	option to `configure' invocations, so that slower dependency