@@ -19,13 +19,12 @@
 # EXTRA_JAVA exists mostly for ensuring interoperation with Automake
 # conditionals).
 
+required=javac
 . ./defs || Exit 1
 
 set -e
 
 cat >> configure.in << 'END'
-AC_CHECK_PROG([HAS_JAVAC], [javac], [:], [exit])
-($HAS_JAVAC 77); $HAS_JAVAC 77
 AM_CONDITIONAL([COND], [test x"$cond" = x"yes"])
 AC_OUTPUT
 END
