@@ -17,13 +17,12 @@
 # Make sure that noinst_JAVA causes generated *.class files not to
 # be installed.
 
+required=javac
 . ./defs || Exit 1
 
 set -e
 
 cat >> configure.in << 'END'
-AC_CHECK_PROG([HAS_JAVAC], [javac], [:], [exit])
-($HAS_JAVAC 77); $HAS_JAVAC 77
 AC_OUTPUT
 END
 
