@@ -1,5 +1,12 @@
 2011-04-23  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	java tests: require java compiler more properly
+	* tests/java-extra.test: Use "required=javac" instead of ad-hoc
+	configure check.
+	* tests/java-noinst.test: Likewise.
+
+2011-04-23  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	java: allow both JAVA and nobase_JAVA in the same Makefile.am
 	* automake.in (handle_java): Also strip `nobase_' from the given
 	prefix, when needed.
